# NodeBot-OS

./: CLAUDE.MD  CLAUDE.md  CMakeLists.txt  CONTEXT.md  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
assets/: CMakeLists.txt
config/: CMakeLists.txt
docs/: AnimationLibrary.md  BehavioralStateMachine.md  CMakeLists.txt  EMO_SPEC.md  ETAPAS.md  ETAPAS_CRITICAS.md  FE_TTLINKER.md  Face_Bench_Checklist.md  IdleBehaviorEngine.md  Implementation_Process_Log.md  LOVYANGFX.md  Music&AudioReactionSystem.md  Power&BatteryBehavior.md  Routine&CircadianSystem.md  Social&AttentionSystem.md  Touch&PhysicalReactionSystem.md  persona.json
docs/Eyes/: emo.html  faces.json  index.html
docs/etapas/: e01-toolchain-e-estrutura-de-projeto.md  e02-pinagem-configuracao-e-baseline-de-hw.md  e03-bring-up-display-st7789.md  e04-bring-up-servos-scs0009.md  e05-bring-up-microfone-inmp441.md  e06-bring-up-audio-playback-max98357a.md  e07-bring-up-bateria-e-power-path.md  e08-bring-up-imu.md  e08a-bring-up-camera-ov2640.md  e09-bring-up-touch-capacitivo.md  e10-bring-up-microsd-e-leds-ws2812.md  e11-validacao-de-consumo-e-brownout.md  e12-eventbus.md  e13-configmanager-e-nvs.md  e14-storagemanager-e-logmanager.md  e15-watchdog-boot-sequence-e-powermanager.md  e16-face-loop-basico-framebuffer-dma-20fps.md  e17-parametros-faciais-e-interpolacao.md  e18-micro-movimentos-e-blink-automatico.md  e19-emotionmapper-6-expressoes-base.md  e20-gaze-loop-e-saccades.md  e21-vetor-de-estado-interno.md  e22-idle-life-bocejo-e-variacao-organica.md  e23-motionsafetyservice.md  e24-healthmonitor-e-modos-degradados.md  e25-brownout-handler-safemode-e-leds-de-estado.md  e26-touchservice-e-reacoes-basicas.md  e27-imuservice-e-eventos-de-orientacao.md  e28-pipeline-de-captura-de-audio-e-vad.md  e29-audiofeedback-e-playback.md  e30-wake-word-local-esp-sr-wakenet.md  e31-comandos-offline-minimos-keyword-intent.md  e31-validacao-hw.md  e32-tts-pre-gravado-e-dialoguestateservice.md  e33-behaviorengine-loop-behavior-tree.md  e34-gestureservice-personaservice-e-soak-8h.md  e35-memoria-mood-atencao-e-engajamento.md  e36-cameraservice-captura-assincrona.md  e37-cloudbridge-stt-tts-cloud-e-timeouts.md  e38-observabilidade-completa.md  (+5 more)
main/: CMakeLists.txt  idf_component.yml  main.c
src/behavior/: CMakeLists.txt  behavior_engine.c  behavior_engine.h  behavior_tree.c  behavior_tree.h  gesture_service.c  gesture_service.h  idle_behavior.c  idle_behavior.h  persona_service.c  persona_service.h  state_vector.c
src/boot/: CMakeLists.txt  boot_sequence.c  boot_sequence.h
src/core/config_manager/: CMakeLists.txt  config_manager.c  nvs_defaults.h
src/core/event_bus/: event_bus.h
src/core/log_manager/: log_manager.c
src/core/watchdog_manager/: watchdog_manager.c  watchdog_manager.h
src/diagnostics/: CMakeLists.txt  diagnostic_mode.c  diagnostic_mode.h  snapshot_service.c  snapshot_service.h  telemetry_service.c  telemetry_service.h
src/drivers/audio/: CMakeLists.txt  audio_driver.c  audio_driver.h  inmp441_driver.c  inmp441_driver.h  max98357a_driver.c  max98357a_driver.h
src/drivers/camera/: CMakeLists.txt  camera_bringup.c  camera_bringup.h
src/drivers/config_manager/: config_manager.h
src/drivers/display/: CMakeLists.txt  display.cpp  display.h  face_engine.cpp  face_engine.h  face_engine.hpp  lgfx_config.hpp
src/drivers/event_bus/: CMakeLists.txt  event_bus.c
src/drivers/i2c_bus/: CMakeLists.txt  i2c_bus.c  i2c_bus.h
src/drivers/imu/: CMakeLists.txt  imu_driver.c  imu_driver.h
src/drivers/led/: CMakeLists.txt  ws2812_driver.c  ws2812_driver.h
src/drivers/log_manager/: CMakeLists.txt  log_manager.c  log_manager.h
src/drivers/sd/: CMakeLists.txt  sd_driver.c  sd_driver.h
src/drivers/servo/: CMakeLists.txt  scs0009.c  scs0009.h  scs0009_driver.c  scs0009_driver.h
src/drivers/touch/: CMakeLists.txt  touch_driver.c  touch_driver.h
src/drivers/watchdog_manager/: CMakeLists.txt
src/face/: CMakeLists.txt  blink_controller.cpp  blink_controller.h  emotion_mapper.c  emotion_mapper.h  face_debug.cpp  face_debug.h  face_engine.cpp  face_engine.h  face_engine.hpp  face_renderer.cpp  face_renderer.h  face_renderer.hpp
src/models/: face_params.h  state_vector.h
src/platform/: hal_init.h
src/services/attention_service/: CMakeLists.txt  attention_service.c  attention_service.h
src/services/audio_capture/: vad.c  (+4 more)
src/services/factory_reset/: CMakeLists.txt  factory_reset.c  factory_reset.h  smoke_tests.c  smoke_tests.h
src/services/jig/: CMakeLists.txt  jig_service.c  jig_service.h
src/svc_audio/: CMakeLists.txt  audio_capture.c  audio_capture.h  audio_feedback.c  audio_feedback.h  audio_feedback_priv.h  audio_playback_task.c  audio_playback_task.h  offline_command_service.c  vad.c  vad.h  wake_word.c  wake_word.h
tests/: CMakeLists.txt
tools/: CMakeLists.txt  jig_test.py
(+70 files in other folders)
